--- a/TYPO3.Neos/Resources/Public/StyleSheet/style.scss
+++ b/TYPO3.Neos/Resources/Public/StyleSheet/style.scss
@@ -367,26 +367,30 @@ body {
 #t3-tree-panel {
 	@include single-box-shadow(rgba($darkest, 0.5), 0px, 0px, 5px);
 	@include box-sizing(border-box);
-	background: #FFFFFF;
-	height: 100%;
-	margin: 0px;
-	margin-top: $menu-height + $launcher-height + $topbar-offset;
-	padding: 0px;
-	padding-bottom: $menu-height + $launcher-height + $topbar-offset;
-	position: fixed;
-	left: 0;
-	top: 36px;
+	background: white;
 	width: 0;
-	z-index: 10014;
-	overflow-x: hidden;
-	overflow-y: auto;
-	z-index: 10012;
-	@include transition-property('width, margin-left');
+	margin: 0;
+	padding: 0;
+	position: fixed;
+	overflow: hidden;
+	left: 0;
+	top: $menu-height + $launcher-height + $topbar-offset + $toolbar-height;
+	bottom: $footer-height;
+	z-index: 10010;
+	@include transition-property('width');
 	@include transition-duration(0.2s);
-	.content {
-		background-color: white;
-		border-radius: 0 0 3px 3px;
-		width: 100%;
+	padding-top: 27px;
+	& > div.ember-view,
+	& > div.ember-view > div.ember-view {
+		height: 100%;
+	}
+	.t3-pagetree,
+	.dynatree-container,
+	#t3-dd-pagetree-con {
+		height: 100%;
+	}
+	.dynatree-container {
+		overflow: visible;
 	}
 }
 
